# rnnoise

./: CMakeLists.txt
cmake/: init_target.cmake
src/: celt_lpc.h
